--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     </div>
 
     <div class="delay-btn atrasado">
-        <a href="https://go.perfectpay.com.br/PPU38CKUR6M?&utm_source=youtube&utm_content=ro"> Quero acesso ao Ganhe Por Assistir </a>
+        <a href="https://app.monetizze.com.br/r/AJT20839819?u=c&pl=DD171165"> Quero acesso ao Ganhe Por Assistir </a>
     </div>
 
     <section class="comments">
