--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     </div>
 
     <div class="delay-btn atrasado">
-        <a href="https://app.monetizze.com.br/r/AJT20839819?u=c&pl=DD171165"> Quero acesso ao Ganhe Por Assistir </a>
+        <a href="https://app.monetizze.com.br/r/AJT20839819?u=c&pl=DD171165">Quero receber meu acesso</a>
     </div>
 
     <section class="comments">
