--- a/v2/index.html
+++ b/v2/index.html
@@ -2,14 +2,7 @@
 <html lang="en">
 
 <head>
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-P6PCB2R');</script>
-<!-- End Google Tag Manager -->
-
+  
   <meta charset="utf-8"><!-- Required meta tags -->
   <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
@@ -2109,12 +2102,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
   <div id=botao hidden class="row col-12 col-lg-6 offset-lg-3  col-sm-12 ">
-    <a  href="https://app.monetizze.com.br/r/BRT1525435" class="animated-button1">
+    <a  href="https://app.monetizze.com.br/r/AJT20839819?u=c&pl=DD171165" class="animated-button1">
       <span></span>
       <span></span>
       <span></span>
       <span></span>
-      <h5 style="font-size:15px;"><b><B>EU QUERO UMA VAGA PARA ASSISTIR VÍDEOS LUCRATIVOS</B></b></h5>
+      <h5 style="font-size:15px;"><b><B>EU QUERO GANHAR ASSISTINDO!</B></b></h5>
     </a>
   </div>
   <BR>
