--- a/v2/index.html
+++ b/v2/index.html
@@ -2,7 +2,15 @@
 <html lang="en">
 
 <head>
-  
+
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-P6PCB2R');</script>
+<!-- End Google Tag Manager -->
+
   <meta charset="utf-8"><!-- Required meta tags -->
   <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
@@ -17,6 +25,7 @@
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,900&amp;display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&amp;display=swap" rel="stylesheet" />
+<meta name="facebook-domain-verification" content="uk1qjtxciy5kufg296y2jxaj0lkwu5" />
   <title>White</title>
 
 
@@ -2058,14 +2067,14 @@
   </style>
 </head>
 
-<body style="background: black;">
+<body>
   <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P6PCB2R"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-  <!--<div class="col-12" style="background-color:#02C4E1; font-weight: 100; color:#222;">
+  <div class="col-12" style="background-color:#02C4E1; font-weight: 100; color:#222;">
   <marquee behavior="scroll" direction="left" style="margin-top:2px;">Você e outras 7 pessoas da sua região foram selecionadas para participar desse programa</marquee>
-</div>-->
+</div>
 
 
 
@@ -2073,7 +2082,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <br>
     <div class="col-lg-6 offset-lg-3 d-flex justify-content-center">
 
-      <div class="row text-center" style="margin-top: 30px;">
+      <div class="row text-center">
 
         <h5><b><b>DESCUBRA AGORA COMO JOVENS ESTÃO MUDANDO DE VIDA APENAS ASSISTINDO VÍDEOS NO CELULAR<b><b></h5>
 
@@ -2094,7 +2103,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div style="color:white;" class="text-center" >
 
       <spam id=mensagem>
-        <h3 style="font-size:17px;margin-top: 10px;"> 1.<span id="pessoas">004</span>
+        <h3 style="font-size:17px;"> 2.<span id="pessoas">004</span>
           pessoas assistindo </h3>
       </spam>
       </b>
@@ -2107,7 +2116,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <span></span>
       <span></span>
       <span></span>
-      <h5 style="font-size:15px;"><b><B>EU QUERO GANHAR ASSISTINDO!</B></b></h5>
+      <h5 style="font-size:15px;"><b><B>EU QUERO UMA VAGA PARA ASSISTIR VÍDEOS LUCRATIVOS</B></b></h5>
     </a>
   </div>
   <BR>
@@ -2119,7 +2128,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
  
 
 
-  <!--<div class="container" style="background-color: white;">
+  <div class="container" style="background-color: white;">
     <div class="interior container clearfix bg-white rounded-3">
       <div class="row">
         <div class=" col-12 blogBox moreBox">
@@ -2139,7 +2148,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="item">
 
           <!-- comentário -->
-          <!--<div class="row">
+          <div class="row">
             <div class="col-2 foto">
               <img class="img-fluid rounded-circle" style="max-width:60px; height: auto" src=".\Assets\perfil1.jpg" alt="">
             </div>
@@ -2160,7 +2169,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
           <!-- comentário -->
-          <!--<div class="row" style="margin-top:10px;">
+          <div class="row" style="margin-top:10px;">
             <div class="col-2 foto" style="margin-right:0px;">
               <img class="img-fluid rounded-circle" style="max-width:60px; height: auto" src=".\Assets\perfil13.jpg"
                 alt="">
@@ -2186,7 +2195,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
           <!-- comentário -->
-          <!--<div class="row" style="margin-top:10px;">
+          <div class="row" style="margin-top:10px;">
             <div class="col-2 foto">
               <img class="img-fluid rounded-circle" style="max-width:60px; height: auto"src=".\Assets\perfil4.jpg" alt="">
             </div>
@@ -2210,7 +2219,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <!-- fim comentário -->
 
           <!-- resposta -->
-          <!--<div class="row" style="margin-top:10px;">
+          <div class="row" style="margin-top:10px;">
             <div class="border-start col-10 offset-2">
               <div class="row">
                 <div class="col-2 text-right foto">
@@ -2238,7 +2247,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
           <!-- resposta -->
-          <!--<div class="row" style="margin-top:10px;">
+          <div class="row" style="margin-top:10px;">
             <div class="border-start col-10 offset-2">
               <div class="row">
                 <div class="col-2 text-right foto">
@@ -2264,7 +2273,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
           <!-- resposta -->
-          <!--<div class="row" style="margin-top:10px;">
+          <div class="row" style="margin-top:10px;">
             <div class="border-start col-10 offset-2">
               <div class="row">
                 <div class="col-2 text-right foto">
@@ -2291,7 +2300,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
           <!-- comentário -->
-          <!--<div class="row" style="margin-top:10px;">
+          <div class="row" style="margin-top:10px;">
             <div class="col-2 foto" style="margin-right:0px;">
               <img class="img-fluid rounded-circle" style="max-width:60px; height: auto" src=".\Assets\perfil9.jpg"
                 alt="">
@@ -2314,7 +2323,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <!-- fim comentário -->
 
           <!-- resposta -->
-          <!--<div class="row" style="margin-top:10px;">
+          <div class="row" style="margin-top:10px;">
             <div class="border-start col-10 offset-2">
               <div class="row">
                 <div class="col-2 text-right foto">
@@ -2338,7 +2347,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
           <!-- fim resposta -->
           <!-- resposta -->
-          <!--<div class="row" style="margin-top:10px;">
+          <div class="row" style="margin-top:10px;">
             <div class="border-start col-10 offset-2">
               <div class="row">
                 <div class="col-2 text-right foto">
@@ -2365,7 +2374,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
           <!-- comentário -->
-          <!--<div class="row" style="margin-top:10px;">
+          <div class="row" style="margin-top:10px;">
             <div class="col-2 foto" style="margin-right:0px;">
               <img class="img-fluid rounded-circle" style="max-width:60px; height: auto" src=".\Assets\perfil12.jpg"
                 alt="">
@@ -2388,7 +2397,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <!-- fim comentário -->
 
           <!-- resposta -->
-          <!--<div class="row" style="margin-top:10px;">
+          <div class="row" style="margin-top:10px;">
             <div class="border-start col-10 offset-2">
               <div class="row">
                 <div class="col-2 text-right foto">
@@ -2413,7 +2422,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
           <!-- fim resposta -->
           <!-- resposta -->
-          <!--<div class="row" style="margin-top:10px;">
+          <div class="row" style="margin-top:10px;">
             <div class="border-start col-10 offset-2">
               <div class="row">
                 <div class="col-2 foto">
@@ -2443,7 +2452,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <!-- fim resposta -->
 
           <!-- comentário -->
-          <!--<div class="row" style="margin-top:10px;">
+          <div class="row" style="margin-top:10px;">
             <div class="col-2 foto" style="margin-right:0px;">
               <img class="img-fluid rounded-circle" style="max-width:60px; height: auto" src=".\Assets\perfil14.jpg"
                 alt="">
@@ -2466,7 +2475,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <!-- fim comentário -->
 
           <!-- resposta -->
-          <!--<div class="row" style="margin-top:10px;">
+          <div class="row" style="margin-top:10px;">
             <div class="border-start col-10 offset-2">
               <div class="row">
                 <div class="col-2 foto">
@@ -2500,7 +2509,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
           <!-- resposta -->
-          <!--<div class="row" style="margin-top:10px;">
+          <div class="row" style="margin-top:10px;">
             <div class="border-start col-10 offset-2">
               <div class="row">
                 <div class="col-2 foto">
@@ -2543,7 +2552,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   </div>
 
-  <!--<div class="container">
+  <div class="container">
     <div class="col-12 text-center">
 
       <h5 style="font-size:10px; color:black;"> Este site não é afiliado ao Facebook ou a qualquer entidade do Facebook.
@@ -2553,7 +2562,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         sinta-se à vontade para usar o link de contato e falar conosco em horário comercial de Segunda a Sextas das
         09h00 ás 18h00. Lemos e respondemos todas as mensagens por ordem de chegada.
       </h5>
-    </div>-->
+    </div>
 </body>
 
 
