--- a/v1/index.html
+++ b/v1/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt">
-<head>      
+<head>
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-P6PCB2R');</script>
+<!-- End Google Tag Manager -->
+	
 <!--<script data-obct type = "text/javascript">
         /* DO NOT MODIFY THIS CODE*/
         !function(_window, _document) {
@@ -52,6 +60,10 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P6PCB2R"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <script>
 
         (function(b) {
