--- a/v1/index.html
+++ b/v1/index.html
@@ -275,7 +275,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
     <div class="delay-btn atrasado">
-        <a href="https://app.monetizze.com.br/r/AJT20839819?u=c&pl=DD171165">Quero receber meu acesso</a>
+        <a href="https://app.monetizze.com.br/r/BAL1530387">Quero receber meu acesso</a>
     </div>
 
     <section class="comments">
