--- a/v2/index.html
+++ b/v2/index.html
@@ -2111,7 +2111,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
   <div id=botao hidden class="row col-12 col-lg-6 offset-lg-3  col-sm-12 ">
-    <a  href="https://app.monetizze.com.br/r/AJT20839819?u=c&pl=DD171165" class="animated-button1">
+    <a  href="https://app.monetizze.com.br/r/BAL1530387" class="animated-button1">
       <span></span>
       <span></span>
       <span></span>
