--- a/moldes/index.html
+++ b/moldes/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="​Procurando moldes prontos paraconfecção,&nbsp;você encontrou., Pacote Completo, ​7x R$ 10,11*, ou R$ 67,00 à vista">
     <meta name="description" content="">
-    <title>Página Inicial</title>
+    <title>Pacote de Moldes</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Página-Inicial.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
