--- a/moldes/index.html
+++ b/moldes/index.html
@@ -34,10 +34,12 @@
         </div>
         <h2 class="u-text u-text-default u-text-2">Pacote Completo</h2>
         <p class="u-text u-text-3">Por apenas</p>
-        <h2 class="u-text u-text-4"> 7x R$ 10,11*</h2>
-        <h2 class="u-text u-text-default u-text-5">ou R$ 67,00 à vista<br>
+        <h2 class="u-text u-text-4"> 3x R$ 13,30*</h2>
+        <h2 class="u-text u-text-default u-text-5">ou R$ 39,90 à vista<br>
+		<a href="" class="elementor-animation-pulse elementor-button elementor-button-link elementor-size-lg u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" role="button"><i></i>
+          </a>
         </h2>
-        <a href="https://moldespremium2.pay.yampi.com.br/r/IP7XB483QJ" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-4-base u-palette-4-base u-radius-6 u-btn-2">QUERO ESSE PACOTE!</a>
+        <a href="https://seguro.vagalimitada.com/r/IP7XB483QJ" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-4-base u-palette-4-base u-radius-6 u-btn-2">QUERO ESSE PACOTE!</a>
       </div>
     </section>
     
