--- a/moldes/index.html
+++ b/moldes/index.html
@@ -48,7 +48,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-align-center u-text u-text-grey-50 u-text-1"> QUEM COMPROU E<br>JÁ RECEBEU, <span class="u-text-palette-1-base">APROVOU​!</span>
         </h2>
-        <img class="u-image u-image-default u-image-1" src="/images/Depoimentos-Clientes-1.webp" alt="" data-image-width="540" data-image-height="1768">
+        <img class="u-image u-image-default u-image-1" src="/images/Depoimentos-Clientes-1.jpg" alt="" data-image-width="540" data-image-height="1768">
       </div>
     </section>
 	  
