--- a/moldes/index.html
+++ b/moldes/index.html
@@ -21,6 +21,7 @@
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Pacote de Moldes">
     <meta property="og:type" content="website">
+	<style>body {background-color: transparent!important;}</style>
   </head>
   <body class="u-body u-xl-mode" data-lang="pt">
     <section class="u-align-center u-clearfix u-palette-1-base u-section-1" id="sec-3307">
