--- a/moldes/index.html
+++ b/moldes/index.html
@@ -21,7 +21,9 @@
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Pacote de Moldes">
     <meta property="og:type" content="website">
-	<style>body {background-color: transparent!important;}</style>
+	<style>body {background-color: transparent!important;}
+	
+	</style>
   </head>
   <body class="u-body u-xl-mode" data-lang="pt">
     <section class="u-align-center u-clearfix u-palette-1-base u-section-1" id="sec-3307">
@@ -30,7 +32,7 @@
         </h2>
         <div class="u-align-left u-expanded-width-xs u-video u-video-1">
           <div class="embed-responsive embed-responsive-1">
-            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/0yfx0VlCSt8?playlist=0yfx0VlCSt8&amp;loop=1&amp;mute=1&amp;showinfo=1&amp;controls=1&amp;start=0&amp;autoplay=1" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
+            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;border-radius: 20px;" class="embed-responsive-item" src="https://www.youtube.com/embed/0yfx0VlCSt8?playlist=0yfx0VlCSt8&amp;loop=1&amp;mute=1&amp;showinfo=1&amp;controls=1&amp;start=0&amp;autoplay=1" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
 		</div>
         </div>
         <h2 class="u-text u-text-default u-text-2">Pacote Completo</h2>
