--- a/moldes/index.html
+++ b/moldes/index.html
@@ -49,7 +49,7 @@
     </section>
     <section class="u-clearfix u-section-2" id="sec-1b9c">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-align-center u-text u-text-grey-50 u-text-1"> QUEM COMPROU E<br>JÁ RECEBEU, <span class="u-text-palette-1-base">APROVOU​!</span>
+        <h2 class="u-text u-text-4"> QUEM COMPROU E<br>JÁ RECEBEU, <span class="u-text-palette-1-base">APROVOU​!</span>
         </h2>
         <img class="u-image u-image-default u-image-1" src="https://i.ibb.co/T11XbVX/Depoimentos-Clientes-1.webp" alt="" data-image-width="" data-image-height="">
       </div>
