--- a/moldes/index.html
+++ b/moldes/index.html
@@ -51,7 +51,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-4"> QUEM COMPROU E<br>JÁ RECEBEU, <span class="u-text-palette-1-base">APROVOU​!</span>
         </h2>
-        <img class="" src="https://i.ibb.co/T11XbVX/Depoimentos-Clientes-1.webp" alt="" data-image-width="" data-image-height="">
+        <img class="" src="https://i.ibb.co/T11XbVX/Depoimentos-Clientes-1.webp" alt="" data-image-width="-webkit-fill-available" data-image-height="-webkit-fill-available">
       </div>
     </section>
 	  
