--- a/moldes/index.html
+++ b/moldes/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;" lang="pt"><head>
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-P6PCB2R');</script>
+<!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="​Procurando moldes prontos paraconfecção,&nbsp;você encontrou., Pacote Completo, ​7x R$ 10,11*, ou R$ 67,00 à vista">
@@ -26,6 +33,10 @@
 	</style>
   </head>
   <body class="u-body u-xl-mode" data-lang="pt">
+	  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P6PCB2R"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <section class="u-align-center u-clearfix u-palette-1-base u-section-1" id="sec-3307">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-1"> Procurando moldes prontos para<br>confecção,<span style="font-weight: 700;">&nbsp;você encontrou.</span>
