--- a/moldes/index.html
+++ b/moldes/index.html
@@ -53,7 +53,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<a href="" class="elementor-animation-pulse elementor-button elementor-button-link elementor-size-lg u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" role="button"><i></i>
           </a>
         </h2>
-        <a href="https://app.monetizze.com.br/r/BWB1531842" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-4-base u-palette-4-base u-radius-6 u-btn-2">QUERO ESSE PACOTE!</a>
+        <a href="https://pagamento.vagalimitada.com/checkout/16870757:1" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-4-base u-palette-4-base u-radius-6 u-btn-2">QUERO ESSE PACOTE!</a>
       <p class="u-small-text u-text u-text-variant u-text-6"> APERTE NO BOTÃO E GARANTA SEU <br>PACOTE COMPLETO AINDA HOJE!
         </p>
 	    </div>
