--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="pt-BR">
  <meta charset="utf-8">
  <head>
+  <meta name="facebook-domain-verification" content="fqlcb16d6xns562owv9xdkvim3v9u1" />
  	<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
