--- a/moldes/index.html
+++ b/moldes/index.html
@@ -38,7 +38,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <section class="u-align-center u-clearfix u-palette-1-base u-section-1" id="sec-3307">
-      <div class="u-clearfix u-sheet u-sheet-1"><br><br>
+      <div class="u-clearfix u-sheet u-sheet-1"><br>
         <h2 class="u-text u-text-1"> Procurando moldes prontos para<br>confecção,<span style="font-weight: 700;">&nbsp;você encontrou.</span>
         </h2>
         <div class="u-align-left u-expanded-width-xs u-video u-video-1">
