--- a/moldes/index.html
+++ b/moldes/index.html
@@ -49,11 +49,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h2 class="u-text u-text-default u-text-2">Pacote Completo</h2>
         <p class="u-text u-text-3">Por apenas</p>
         <h2 class="u-text u-text-4"> 3x R$ 13,30*</h2>
-        <h2 class="u-text u-text-default u-text-5">ou R$ 39,90 à vista<br>
-          <a href="https://pay.hotmart.com/M48041483M?off=wh2wvwuv&amp;checkoutMode=10" class="elementor-animation-pulse elementor-button elementor-button-link elementor-size-lg u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" role="button"><i></i>
-          </a>
+        <h2 class="u-text u-text-default u-text-5">ou R$ 39,90 à vista<br><br>
         </h2>
-        <a href="https://seguro.vagalimitada.com/r/IP7XB483QJ" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-4-base u-palette-4-base u-radius-6 u-btn-2">QUERO ESSE PACOTE!</a>
+        <a href="https://pay.kiwify.com.br/BLPjqGU" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-4-base u-palette-4-base u-radius-6 u-btn-2">QUERO ESSES MOLDES!</a>
       <p class="u-small-text u-text u-text-variant u-text-6"> APERTE NO BOTÃO E GARANTA SEU <br>PACOTE COMPLETO AINDA HOJE!
         </p>
 	    </div>
