--- a/moldes/index.html
+++ b/moldes/index.html
@@ -9,7 +9,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="​Procurando moldes prontos paraconfecção,&nbsp;você encontrou., Pacote Completo, ​7x R$ 10,11*, ou R$ 67,00 à vista">
+    <meta name="keywords" content="​Procurando moldes prontos paraconfecção,&nbsp;você encontrou. Pacote Completo">
     <meta name="description" content="">
     <title>Pacote de Moldes</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -48,7 +48,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <h2 class="u-text u-text-default u-text-2">Pacote Completo</h2>
         <p class="u-text u-text-3">Por apenas</p>
-        <h2 class="u-text u-text-4"> 9x de R$ 5,12*</h2>
+        <h2 class="u-text u-text-4"> 3x de R$ 13,30*</h2>
         <h2 class="u-text u-text-default u-text-5">ou R$ 39,90 à vista<br><br>
         </h2>
         <a href="https://seguro.vagalimitada.com/r/IP7XB483QJ" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-4-base u-palette-4-base u-radius-6 u-btn-2">QUERO ESSES MOLDES</a>
