--- a/moldes/index.html
+++ b/moldes/index.html
@@ -46,10 +46,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;border-radius: 20px;" class="embed-responsive-item" src="https://www.youtube.com/embed/jzEho6tfqJI?playlist=jzEho6tfqJI&amp;loop=1&amp;mute=0&amp;showinfo=1&amp;controls=1&amp;start=0&amp;autoplay=1" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
 		</div>
         </div>
-        <h2 class="u-text u-text-default u-text-2">Pacote Completo</h2>
+        <h2 class="u-text u-text-default u-text-2">Pacote de Moldes</h2>
         <p class="u-text u-text-3">Por apenas</p>
-        <h2 class="u-text u-text-4"> 3x R$ 13,30*</h2>
-        <h2 class="u-text u-text-default u-text-5">ou R$ 39,90 à vista<br><br>
+        <h2 class="u-text u-text-4"><small>3x de R$ 13,30*</small></h2>
+        <h2 class="u-text u-text-default u-text-5"><small>ou R$ 39,90 à vista</small><br><br>
         </h2>
         <a href="https://seguro.vagalimitada.com/r/IP7XB483QJ" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-4-base u-palette-4-base u-radius-6 u-btn-2">QUERO ESSES MOLDES</a>
       <p class="u-small-text u-text u-text-variant u-text-6"> APERTE NO BOTÃO E GARANTA SEU <br>PACOTE COMPLETO AINDA HOJE!
